--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -1,9 +1,9 @@
 <app-side-bar></app-side-bar>
 <app-header-bar
   [params]="{
-  title: 'Registro de Inmueble',
-  description: 'Gestiona la información del inmueble',
+  title: 'Dashboard',
+  description: 'Bienvenido, Juan Pérez (Asesor)',
   name: 'Juan Pérez',
-  aux: false
+  aux: true
 }">
 </app-header-bar>
