--- a/src/app/features/report/pages/report-page/report-page.html
+++ b/src/app/features/report/pages/report-page/report-page.html
@@ -1,8 +1,8 @@
 <app-side-bar></app-side-bar>
 <app-header-bar
   [params]="{
-  title: 'Configuración del Sistema',
-  description: 'Ajsuta los parámetros predeterminados de la aplicación',
+  title: 'Resultados y Gráficos',
+  description: 'Visualización de plan de financiamiento',
   name: 'Juan Pérez',
   aux: false
 }">
