--- a/src/app/features/simulator/pages/simulator-page/simulator-page.html
+++ b/src/app/features/simulator/pages/simulator-page/simulator-page.html
@@ -1,2 +1,9 @@
-
 <app-side-bar></app-side-bar>
+<app-header-bar
+  [params]="{
+  title: 'Simulación de Crédito Hipotecario',
+  description: 'Calcula y analiza planes de financiamiento',
+  name: 'Juan Pérez',
+  aux: false
+}">
+</app-header-bar>
