--- a/src/app/features/user/pages/user-page/user-page.html
+++ b/src/app/features/user/pages/user-page/user-page.html
@@ -1,8 +1,8 @@
 <app-side-bar></app-side-bar>
 <app-header-bar
   [params]="{
-  title: 'Configuración del Sistema',
-  description: 'Ajsuta los parámetros predeterminados de la aplicación',
+  title: 'Registro de Usuario',
+  description: 'Gestiona la información de usuario',
   name: 'Juan Pérez',
   aux: false
 }">
