--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%;}
+*{padding: 0; margin: 0; box-sizing: border-box;  justify-content: center;text-align: center;}
+body { margin: 0; font-family: Bahnschrift, sans-serif; }
