chore: register/login process

--- a/src/app/features/IAM/pages/login-page/login-page.html
+++ b/src/app/features/IAM/pages/login-page/login-page.html
@@ -1,6 +1,6 @@
 <div class="div-fondo">
   <img src="/assets/img/layout.jpg" class="bg-img">
-  <div class="form">
+  <div class="form" [formGroup]="form">
     <div class="form-header">
       <img src="/assets/img/logo.png">
       <h1>ViviendaSmart</h1>
@@ -9,18 +9,18 @@
     <div class="form-body">
       <div class="email">
         <p>Correo</p>
-        <input type="email" placeholder="usuario@ejemplo.com">
+        <input type="email" formControlName="email" placeholder="usuario@ejemplo.com">
       </div>
       <div class="password">
         <p>Contraseña</p>
-        <input type="password" placeholder="**********">
+        <input type="password" formControlName="password" placeholder="**********">
       </div>
     </div>
     <div class="form-footer">
-      <button [routerLink]="['/home']">
+      <button (click)="login()">
         Iniciar sesión
       </button>
-      <p>¿Olvidaste tu contraseña?</p>
+      <a [routerLink]="['/register']">¿No estás registrado?</a>
     </div>
   </div>
 </div>
