fix: rename user bounded context -> client bounded context

--- a/src/app/features/client/pages/client-page/client-page.html
+++ b/src/app/features/client/pages/client-page/client-page.html
@@ -1,8 +1,8 @@
 <app-side-bar></app-side-bar>
 <app-header-bar
   [params]="{
-  title: 'Registro de Usuario',
-  description: 'Gestiona la información de usuario',
+  title: 'Registro de Cliente',
+  description: 'Gestiona la información de clientes',
   name: 'Juan Pérez',
   aux: false
 }">
