chore: property card styles

--- a/src/app/features/config/pages/config-page/config-page.html
+++ b/src/app/features/config/pages/config-page/config-page.html
@@ -4,6 +4,7 @@
   title: 'Configuración del Sistema',
   description: 'Ajsuta los parámetros predeterminados de la aplicación',
   name: 'Juan Pérez',
-  aux: false
+  aux: false,
+  aux2: false
 }">
 </app-header-bar>
