--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -4,6 +4,7 @@
   title: 'Dashboard',
   description: 'Bienvenido, Juan Pérez (Asesor)',
   name: 'Juan Pérez',
-  aux: true
+  aux: true,
+  aux2: false
 }">
 </app-header-bar>
