--- a/src/app/features/property/components/property-list/property-list.css
+++ b/src/app/features/property/components/property-list/property-list.css
@@ -1,6 +1,7 @@
 .card{
   text-align: center;
-  background-color: #f4f4f4 !important;
+
+  background: linear-gradient(to bottom, #FAF9FD, #f5f5f6);
 }
 
 .card-header {
@@ -34,7 +35,8 @@
 }
 
 .property-cards-container {
-  width: 100%;
+  margin-left: 4rem;
+  width: 95%;
   display: flex;
   flex-wrap: wrap; /* Esto permite que las tarjetas se ajusten automáticamente */
   justify-content: center; /* Centra las tarjetas horizontalmente */
