--- a/src/app/features/report/pages/report-page/report-page.html
+++ b/src/app/features/report/pages/report-page/report-page.html
@@ -4,6 +4,7 @@
   title: 'Resultados y Gráficos',
   description: 'Visualización de plan de financiamiento',
   name: 'Juan Pérez',
-  aux: false
+  aux: false,
+  aux2: false
 }">
 </app-header-bar>
