--- a/src/app/shared/components/header-bar/header-bar.component/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component/header-bar.component.html
@@ -14,4 +14,9 @@
     </div>
   </div>
   }
+  @if (params.aux2){
+    <div class="aux2-wrapper">
+      <app-classic-button (click)="onShowModal()" class="button-aux2">+ Agregar Propiedad</app-classic-button>
+    </div>
+  }
 </div>
