--- a/src/app/features/client/pages/client-page/client-page.html
+++ b/src/app/features/client/pages/client-page/client-page.html
@@ -4,6 +4,7 @@
   title: 'Registro de Cliente',
   description: 'Gestiona la información de clientes',
   name: 'Juan Pérez',
-  aux: false
+  aux: false,
+  aux2: false,
 }">
 </app-header-bar>
