--- a/src/app/features/simulator/pages/simulator-page/simulator-page.html
+++ b/src/app/features/simulator/pages/simulator-page/simulator-page.html
@@ -4,6 +4,7 @@
   title: 'Simulación de Crédito Hipotecario',
   description: 'Calcula y analiza planes de financiamiento',
   name: 'Juan Pérez',
-  aux: false
+  aux: false,
+  aux2: false
 }">
 </app-header-bar>
