--- a/src/app/features/property/components/property-list/property-list.html
+++ b/src/app/features/property/components/property-list/property-list.html
@@ -10,11 +10,10 @@
       </div>
       <div class="card-footer">
         <mat-card-actions class="card-actions">
-            <app-classic-button>Ver Propiedad</app-classic-button>
+            <app-classic-button (click)="onShowEditForm(property)">Ver Propiedad</app-classic-button>
         </mat-card-actions>
       </div>
     </mat-card>
   </div>
-
 </div>
 
