--- a/src/app/features/property/components/property-form-modal/property-form-modal.html
+++ b/src/app/features/property/components/property-form-modal/property-form-modal.html
@@ -19,6 +19,6 @@
       </label>
     </div>
     <app-classic-button [disabled]="form.invalid" >Confirmar</app-classic-button>
-    <app-classic-button (click)="close()" type="button" >Cancelar</app-classic-button>
+    <app-classic-button (click)="close()" class="cancel-button" type="button" >Cancelar</app-classic-button>
   </form>
 </div>
