--- a/src/app/features/client/components/client-list/client-list.css
+++ b/src/app/features/client/components/client-list/client-list.css
@@ -1,28 +1,33 @@
 .card{
   text-align: center;
-
   background: linear-gradient(to bottom, #FAF9FD, #f5f5f6);
 }
 
 .card-header {
-
   display: flex;
-  flex-direction: column;
-  gap: 2px;
+  flex-direction: row;
+  gap: 1vw;
   align-items: center;
+}
+
+.img-wrapper{
+  background-color: #c3c3c3;
+  border-radius: 100%;
+  margin-top: 0.5vw;
+  filter: invert(100);
 }
 
 .body-title {
   margin: 0;
-  font-size: 1.3rem;
-  font-weight: 500;
+  font-size: 1rem;
+  font-weight: 400;
   line-height: 37px;
   color: #080210;
 }
 
 .body-text {
   margin: 0;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 300;
   line-height: 19px;
   color: #080210;
@@ -30,12 +35,12 @@
 
 .body-img{
   width: 100%;
-  height: 18vh;
-  object-fit: cover;
+  height: 10vh;
+  padding: 1rem;
   border-radius: 5%;
 }
 
-.property-cards-container {
+.client-cards-container {
   margin-left: 4rem;
   width: 95%;
   display: flex;
@@ -46,8 +51,8 @@
   padding-top: 7rem;
 }
 
-.property-card {
-  width: 16vw;
+.client-card {
+  width: 20vw;
   margin: 1vh;
   display: flex;
   flex-direction: column;
