--- a/src/app/features/property/components/property-form-modal/property-form-modal.css
+++ b/src/app/features/property/components/property-form-modal/property-form-modal.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   max-width: 500px;
-  padding: 15px 20px;
+  padding: 2rem;
   border-radius: 30px;
   position: relative;
   background-color: #ffffff;
@@ -34,7 +34,6 @@
   position: relative;
   display: flex;
   justify-content: center;
-  margin: 5px 0;
   text-align: center;
   line-height: 50px;
 }
@@ -43,7 +42,8 @@
 .inputs-container{
   display: flex;
   flex-direction: column;
-  gap:3vh;
+  padding: 0.5rem;
+  gap:4vh;
 }
 
 .form label {
@@ -83,4 +83,13 @@
 
 .input {
   font-size:16px;
+}
+
+.host ::ng-deep app-classic-button.cancel-button button{
+  background-color: #F3F3F5;
+}
+
+.host ::ng-deep app-classic-button.cancel-button button:hover{
+  background-color: #F3F3F5;
+  color: #d32626;
 }
