feat: clients bounded context finished

--- a/src/app/features/client/components/client-list/client-list.css
+++ b/src/app/features/client/components/client-list/client-list.css
@@ -58,3 +58,11 @@
   flex-direction: column;
 }
 
+:host ::ng-deep app-classic-button.look-button button{
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem 0.1rem;
+}
+
+:host ::ng-deep app-classic-button.delete-button button:hover{
+
+}
