--- a/src/app/features/client/components/client-list/client-list.html
+++ b/src/app/features/client/components/client-list/client-list.html
@@ -14,7 +14,7 @@
       </div>
       <div class="card-footer">
         <mat-card-actions class="card-actions">
-          <app-classic-button (click)="onShowEditForm(client)">Ver Cliente</app-classic-button>
+          <app-classic-button class="look-button" (click)="onShowEditForm(client)">Ver Cliente</app-classic-button>
         </mat-card-actions>
       </div>
     </mat-card>
