--- a/src/app/features/client/components/client-form-modal/client-form-modal.css
+++ b/src/app/features/client/components/client-form-modal/client-form-modal.css
@@ -13,11 +13,12 @@
 }
 
 .form {
-  font-weight: 300;
+  width: 25vw;
+  height: 80vh;
+  font-weight: 200;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  padding: 2rem;
+  padding: 1.5rem;
   border-radius: 30px;
   position: relative;
   background-color: #ffffff;
@@ -29,32 +30,88 @@
 
 
 .form-title {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 700;
   position: relative;
   display: flex;
   justify-content: center;
   text-align: center;
-  line-height: 50px;
+  line-height: 40px;
 }
 
 
 .inputs-container{
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
-  gap:4vh;
+  gap:2vh;
 }
 
+.inputs-first {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.inputs-second {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+.inputs-third {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+.inputs-fourth {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
 .form label {
   position: relative;
+  width: 100%;
+}
+
+.form p{
+  font-size: 13px;
+}
+
+.support-label{
+  display: flex;
+  flex-direction: row;
+
+}
+.support-label-1{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+.support-label-2{
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
+}
+
+.history-label{
+  display: flex;
+  flex-direction: row;
+}
+.history-label-1{
+  gap: 0.5rem;
+  display: flex;
+  flex-direction: row;
+}
+.history-label-2{
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: row;
 }
 
 .form label .input {
   background-color: #F3F3F5;
   color: #8e8e8e;
   width: 100%;
-  padding: 20px 0 05px 10px;
+  padding: 20px 0 05px 8px;
   outline: 0;
   border: 0;
   border-radius: 10px;
@@ -70,28 +127,36 @@
 }
 
 .form label .input:placeholder-shown + span {
-  top: 12.5px;
-  font-size: 14px;
+  top: 10px;
+  font-size: 12px;
 }
 
 .form label .input:focus + span,.form label .input:valid + span {
   color: #00A6CF;
-  top: 3px;
+  top: 2px;
   font-size: 11px;
   font-weight: 600;
 }
 
 .input {
-  font-size:16px;
+  font-size:13px;
 }
 
-
 :host ::ng-deep app-classic-button.cancel-button button{
+  padding: 0.2rem;
+  font-size: 0.8rem;
   background-color: #026d95;
   outline: 3px #026d95 solid;
 }
 
 :host ::ng-deep app-classic-button.cancel-button button:hover{
+  padding: 0.2rem;
+  font-size: 0.8rem;
   color: #026d95;
   background-color: #F3F3F5;
+}
+
+:host ::ng-deep app-classic-button.submit-button button{
+  padding: 0.2rem;
+  font-size: 0.8rem;
 }
