--- a/src/app/features/config/pages/config-page/config-page.html
+++ b/src/app/features/config/pages/config-page/config-page.html
@@ -5,6 +5,6 @@
   description: 'Ajsuta los parámetros predeterminados de la aplicación',
   name: 'Juan Pérez',
   aux: false,
-  aux2: true
+  aux2: false
 }">
 </app-header-bar>
