--- a/src/app/features/property/components/property-form-edit-modal/property-form-edit-modal.css
+++ b/src/app/features/property/components/property-form-edit-modal/property-form-edit-modal.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   max-width: 500px;
-  padding: 15px 20px;
+  padding: 1.8rem;
   border-radius: 30px;
   position: relative;
   background-color: #ffffff;
@@ -29,12 +29,11 @@
 
 
 .form-title {
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 700;
   position: relative;
   display: flex;
   justify-content: center;
-  margin: 5px 0;
   text-align: center;
   line-height: 50px;
 }
@@ -43,7 +42,8 @@
 .inputs-container{
   display: flex;
   flex-direction: column;
-  gap:3vh;
+  padding: 0.5rem;
+  gap:4vh;
 }
 
 .form label {
