--- a/src/app/shared/components/header-bar/header-bar.component/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component/header-bar.component.html
@@ -16,7 +16,7 @@
   }
   @if (params.aux2){
     <div class="aux2-wrapper">
-      <app-classic-button (click)="onShowModal()" class="button-aux2">+ Agregar Propiedad</app-classic-button>
+      <app-classic-button (click)="onShowModal()" class="button-aux2">+ Agregar Registro</app-classic-button>
     </div>
   }
 </div>
