--- a/src/app/features/config/pages/config-page/config-page.html
+++ b/src/app/features/config/pages/config-page/config-page.html
@@ -8,3 +8,7 @@
   aux2: false
 }">
 </app-header-bar>
+<app-config-form-modal
+  [config]="selectedConfig"
+  (formSubmitted)="onFormSubmittedOrEdited($event)"
+></app-config-form-modal>
