--- a/src/app/features/property/components/property-list/property-list.html
+++ b/src/app/features/property/components/property-list/property-list.html
@@ -6,7 +6,7 @@
         <img class="body-img" src="{{property.photo}}" (error)="onImageError($event)">
         <h3 class="body-title">{{ property.address }}</h3>
         <p class="body-text">Area: {{ property.size  }} m²</p>
-        <p class="body-text">Precio: {{ property.price }}</p>
+        <p class="body-text">Precio: {{ property.price }} soles</p>
       </div>
       <div class="card-footer">
         <mat-card-actions class="card-actions">
