--- a/src/app/features/client/components/client-form-modal/client-form-modal.html
+++ b/src/app/features/client/components/client-form-modal/client-form-modal.html
@@ -20,7 +20,7 @@
         </label>
         <label>
           <input class="input" type="number" value="0.0" step="any" pattern="[0-9,.]+" placeholder="" required formControlName="monthlyIncome">
-          <span>Ingreso mensual</span>
+          <span>Ingreso mensual (soles)</span>
         </label>
       </div>
       <div class="inputs-third">
