feat: simulator input and credit data

--- a/src/app/features/client/components/client-form-edit-modal/client-form-edit-modal.html
+++ b/src/app/features/client/components/client-form-edit-modal/client-form-edit-modal.html
@@ -79,22 +79,22 @@
         <p>Estado Civil</p>
         <div class="support-label">
           <label class="support-label-1">
-            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="0" />
+            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="'SOLTERO'" />
             <p>Soltero</p>
           </label>
 
           <label class="support-label-1">
-            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="1" />
+            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="'CASADO'" />
             <p>Casado</p>
           </label>
 
           <label class="support-label-1">
-            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="2" />
+            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="'VIUDO'" />
             <p>Viudo</p>
           </label>
 
           <label class="support-label-2">
-            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="3" />
+            <input type="radio" formControlName="maritalStatus" name="maritalStatus" [value]="'DIVORCIADO'" />
             <p>Divorciado</p>
           </label>
         </div>
