--- a/src/app/features/client/components/client-form-modal/client-form-modal.html
+++ b/src/app/features/client/components/client-form-modal/client-form-modal.html
@@ -15,7 +15,7 @@
       </div>
       <div class="inputs-second">
         <label>
-          <input class="input" type="text" placeholder="" required formControlName="dni">
+          <input class="input" type="text" maxlength="8" placeholder="" required formControlName="dni">
           <span>Dni</span>
         </label>
         <label>
