--- a/src/app/features/config/components/config-form-modal/config-form-modal.html
+++ b/src/app/features/config/components/config-form-modal/config-form-modal.html
@@ -125,7 +125,7 @@
             required
             formControlName="term"
           >
-          <span>Plazo</span>
+          <span>Días de gracia</span>
         </label>
       </div>
 
