--- a/src/app/features/simulator/pages/simulator-page/simulator-page.html
+++ b/src/app/features/simulator/pages/simulator-page/simulator-page.html
@@ -10,5 +10,15 @@
 </app-header-bar>
 
 <div class="main-content">
-  <app-credit-data></app-credit-data>
+  <app-input-form-modal
+  [viviendas]="properties"
+  [clientes]="clients"
+  >
+
+
+  </app-input-form-modal>
+
+  <app-credit-data
+
+  ></app-credit-data>
 </div>
